<resources>
    <string name="app_name">User Info</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter your email</string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="submit_button">Submit</string>
    <string name="sign_up">Registration</string>
    <string name="Here">Here\n</string>
    <string name="full_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="register">Register\n</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="state">State\n</string>
    <string name="country">Country\n</string>
    <string name="interest">Interest</string>
    <string name="birthday">Birth Day</string>
    <string name="birth_time">Birth Time</string>
    <string name="gender">Gender\n</string>
    />

    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>
